css/main.css
body {
  position: relative;
}

.heading{
    background-color: #303440;
    height: 11vh;
    width: 100%;
    position:fixed;
    z-index: 1;
}

.header>a{
    margin-left:40px;
    margin-top:20px;
    float: left;
    font-size:0.8em;
    text-decoration:none;
    color:white;
}

h3{ 
    font-family: 'Source Sans Pro', sans-serif;
    padding-right:1em;
}

ul{
 display: block;
 float: right;
 width:auto;
 list-style-type: none;
 margin: 0;
 list-style: none;
}
 
.right>li>a{
     color: white;
}
 
.navb{
     display:inline;
     text-align:left;
     font-family: 'Source Sans Pro', sans-serif;
     padding-right:1em;
     font-size: 1em;
}

.phones{
    background-color: #EB5054;
    width: 100%;
    height: 100vh;
    vertical-align:middle;
    padding-top: 20vh;   
}
    
.header{
    display: inline;
}
    
.phones img{
    display: block;
    margin-left: auto;
    margin-right: auto;
}
    
.services{
    background-color:#F2F2F2;
    height:90vh;
    width:100%;
}

.font{
    color: #505571;
    font-family: 'Droid Sans', sans-serif;
    font-weight: bold;
}

.services h1{
    font-family: 'Open Sans', sans-serif;
    font-size: 2em;
    padding-top:1em;
    font-weight: bold;
}    

h2{
    font-family: 'Droid Sans', sans-serif;
    font-size: 1.3em;
    color: #505571;
    font-weight: bold;
}   
    
.greyP{    
    font-family:'Josefin Sans', sans-serif;
    font-size:1em;
    text-align: justify;
    color: #505571;
}

.portfolio{
    background-color:#303440;
    height: 150vh;
    width: 100%;
}
.portfolio a{
    text-decoration:none;
    color: #505571;
    border-style: solid;
    border-width: 2px;
    text-align:center;
    border-radius: 5px;
    padding-right:1em;
    display: inline-block;
}

.portfolio img{
        display: inline-block;
        height: 30vh;
        width: 40vh;
}

.aboutUs{
    background-color:#F2F2F2;
    height: 120vh;
    width: 100%;
}

.aboutUs a{
         display: inline-block;
}

.contact{
    background-color: #EB5054;
    color:white;
    width:100%;
    height:110vh;
}

.quote{
font-family: 'Josefin Sans', sans-serif;
   font-weight: bold;
   color: #E8ECF9;
}

.layout{
background-color: #CA454A;
border-color: #CA454A;
}

.blueP{
    color: #505571;
    font-family: 'Droid Sans', sans-serif;
    font-weight: bold;
}

.contactP{
    color: #E8ECF9;
    text-align:justify;
}

.contPad{
 margin-top:0px;   
}

.footer{
    width:100%;
    height: 10vh;
    background-color: #303440;
}

.contact textarea{
    height: 30vh;
}

.links{
    float:right;    
}

.divPad{
    padding-top: 10vh;
}

.navb>a:hover{
    color:black;
 }
 
#portfolio_i .singolo-thumbnail.fadeOut {
  width: 0;
  height: 0;
  padding: 0;
  overflow: hidden;
}

#portfolio_i #filter a:hover{
    color:white;
}

#portfolio_i .singolo-thumbnail {
   transition: all 0.5s ease-in;
}

